fix(layout): better handling for narrow screens
Previously, on narrow screens of e.g phones, the site did not adjust
beyond a `max-width` of 760px, causing overflows like in #736 and
generally making it hard to navigate.

This simple media query fixes that, and also expands the sidebar to
full-width in such a case.

The only downside is that the user now needs to scroll past the filters
and such.

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1083,3 +1083,13 @@ a:focus-visible {
   font-weight: bold;
 }
 
+@media (max-width: 760px) {
+  .search-page {
+    & .search-results {
+      flex-direction: column;
+    }
+    & ul.search-sidebar {
+      width: 100%;
+    }
+  }
+}
